--- a/flaskapp/templates/output.html
+++ b/flaskapp/templates/output.html
@@ -76,22 +76,14 @@
         <h3>Results:</h3>
       </div>
 
-    <!--vertical table-->
-    <!--<table class="table table-hover" class=scrollable>
-      <tr><th>Time</th><th>Chord</th></tr>
-      {% for row in predictions %}
-      <tr><td>{{ row['time'] }}</td><td>{{ row['chord']}}</td></tr>
-      {% endfor %}
-    </table>-->
-
     <!--Horizontal table-->
-    <div class=scrollable>
+    <div class="scrollable container-fluid">
       <table class="table table-hover">
 
 
         <tr><th>Time</th>
           {% for row in predictions %}
-            <td>{{ row['time']}}</td>
+            <td>{{ row['time'] }}</td>
           {% endfor %}
         </tr>
 
@@ -126,8 +118,8 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>
+    <!--<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="../../assets/js/vendor/popper.min.js"></script>-->
     <script src="static/js/bootstrap.min.js"></script>
   </body>
 </html>
