--- a/flaskapp/templates/input.html
+++ b/flaskapp/templates/input.html
@@ -62,7 +62,7 @@
           <h2>Chord Identifier</h2>
       </div>
 
-      <div class = "container">
+      <div class = "container starter-template">
 
         <form action="/output" method="GET">
           <div class="form-group">
